# NiceMail

./: README.md  pyproject.toml
assets/: nicemail.desktop
package/: build_deb.sh
scripts/: nicemail-launcher
src/nicemail/: __init__.py  app.py
src/nicemail/core/: config.py  controller.py  mail_client.py  services.py  spam_manager.py
src/nicemail/resources/: sample_messages.json  style.qss
src/nicemail/ui/: __init__.py  main_window.py  models.py
src/nicemail/ui/widgets/: __init__.py  detail_panel.py  folder_hint.py
