[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicemail"
version = "0.1.0"
description = "A beautiful, senior-friendly email client for Linux"
authors = [{name = "NiceMail Team"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["email", "qt", "senior-friendly"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
    "Operating System :: POSIX :: Linux",
    "Framework :: Qt",
]
dependencies = [
    "PySide6>=6.6",
    "httpx>=0.27",
]

[project.scripts]
nicemail = "nicemail.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nicemail" = ["resources/*.qss", "resources/*.json"]
